--- a/3.Population_Statistics_with_Stacks.md
+++ b/3.Population_Statistics_with_Stacks.md
@@ -3,7 +3,7 @@
 [Setup Stacks](#setup-stacks) \
 [Input files](#input-files) \
 [populations command](#populations-command) \
-[populations output](#populations-output) \
+[populations output](#populations-output) 
 
 ## Setup Stacks 
 
