--- a/5.Population_admixture_with_structure.md
+++ b/5.Population_admixture_with_structure.md
@@ -1,14 +1,14 @@
 # Population admixture with STRUCTURE
 
 ### Input files
-To run Structure you need 2 input files: 1) the `.snps.hdf5` file (from ipyrad output files) and 2) a population file \
+To run Structure you need 2 input files: 1) the `.snps.hdf5` file (from ipyrad output files) and 2) a population file  
 
 The population file should look like this:
 
       imap = {
-          "Pop_name1": ["indiv_name1", "indivi_name2"],
-          "pop_name2": ["indiv_name3, indiv_name4"],
-          "pop_name3": ["indiv_name5", "Sibara_filifolia_HES_SIFI111_9599", "Sibara_filifolia_HES_SIFI124_Bunkers2_9612", "Sibara_filifolia_HES_SIFI128_Bunkers2_9616", "Sibara_filifolia_HES_SIFI129_Bunkers2_9617", "Sibara_filifolia_HES_SIFI130_Bunkers2_9630", "Sibara_filifolia_HES_SIFI44_9519","Sibara_filifolia_HES_SIFI94_9590", "Sibara_filifolia_SNK_SIFI100_9596", "Sibara_filifolia_SNK_SIFI141_Bunkers2_9631","Sibara_filifolia_SNK_SIFI98_9594", "Sibara_filifolia_SNK_SIFI99_9595"],
+          "Pop_name1": ["indiv_name1", "indivi_name2","indiv_name3","indiv_name4","indiv_name5","indiv_name6",],
+          "pop_name2": ["indiv_name7, indiv_name8", "indiv_name9","indiv_name10","indiv_name11","indiv_name12","indiv_name13","indiv_name14"],
+          "pop_name3": ["indiv_name15", "indiv_name16","indiv_name17","indiv_name18","indiv_name19","indiv_name20","indiv_name21","indiv_name22"]
           }
 
 In terminal
