--- a/3.Population_Statistics_with_Stacks.md
+++ b/3.Population_Statistics_with_Stacks.md
@@ -34,9 +34,9 @@ Test that stacks is working properly, if it is, this next line will give you the
 ## Input files:
 
 Before we start running things, we need two input files and the path of where they live. 
-1) the vcf file (output from stacks) \
+1) **the vcf file** (output from stacks) \
 Go to the directory where your .vcf file is and `pwd` to get the correct path 
-2) population codes file for the files included in the vcf \
+2) **population codes** file for the files included in the vcf \
 The pop_codes.csv file should be 2 columns; the name of the files without the file ending (.fastq.gz etc) which you can take from the final stats file in ipyrad outfiles and the site names
 
 `NAME_stacks_pop_codes.csv`
