--- a/1.Processing_data_with_ipyrad.md
+++ b/1.Processing_data_with_ipyrad.md
@@ -1,11 +1,11 @@
 # 1. ddRADseq Data Processing
 
 ## Wee background on the data:
-These samples were collected on both San Clemente and Catalina Islands or grown in the greenhouse from seeds collected there. We also have outgroup samples from herbarium specimens for the phylogentetic component. We'll have another plate of data coming in with additional samples from those islands as well as the out groups from the mainland. The data is SE150 and already demultiplexed by the sequencing facility (UCR Genomics Core).  
+Samples were collected on both San Clemente and Catalina Islands or grown in the greenhouse from seeds collected there. We also have outgroup samples from herbarium specimens for the phylogenetic component. We'll have another plate of data coming in with additional samples from those islands as well as the out groups from the mainland. The data is SE150 and already demultiplexed by the sequencing facility (UCR Genomics Core).  
 
 ## Things to know before you start:
 ### Where's the data:
-We store our raw data/back up in the Genetics-Synology located at: `/Volumes/Genetics-Synology/` / which can also be found on the desktop of the Mac.  This data (`.fastqz` files) is copied to the project folder in Projects on the desktop. This is the folder/directory where all output files, from ipyrad and downstream analysis with other software, will be written to. 
+We store our raw data/back up in the Genetics-Synology located at: `/Volumes/Genetics-Synology/` / which can also be found on the desktop of the Mac.  This data (`.fastqz` files) is copied to the project folder in Projects on the desktop. This is the folder/directory where all output files, from ipyrad and downstream analysis with other software, are written to. 
 
 # Table of Contents
 - [Data processing with ipyrad - setting up parameters file](#data-processing-with-ipyrad)
@@ -77,7 +77,7 @@ Eventhough our data is demultiplexed (organized into individual files based on b
 
             ipyrad -p params-TAXA.txt -s 1
 
-Take a look at the s1_demultiplex_stats.txt file that it produced. I will show your files and how many total raw seqs you have.
+Take a look at the s1_demultiplex_stats.txt file that it produced. It will show your files and how many total raw seqs per sample.
 
 ## Step 2: Filter reads (~8min)
 Here ipyrad filters reads based on quality scores.
